--- a/netflixcopy.html
+++ b/netflixcopy.html
@@ -29,6 +29,12 @@
     .customdropdown{
         min-width: 0!important;
     }
+    @media (max-width: 575.98px) {
+        .sm{
+            margin-top: 2rem;
+        }
+    }
+
   </style>
 
   </head>
@@ -93,20 +99,20 @@
             </div>
         </div>
         <div class="row">
-            <div class="col col-md-3">
-                <h5>MEMBERSHIP & BILLING</h5>
+            <div class="col-md-3">
+                <p class="text-uppercase text-muted font-weight-lighter">Membership & billing</p>
                 <button type="button" class="btn btn-light">Cancel Membership</button>
             </div>
-            <div class="col col-md-9">
+            <div class="col sm">
                 <div class="row">
                     <div class="col">
-                        <div class="row">
+                        <div class="row dinfo">
                             <div class="col-6 col-md-5">
                                 <p>student@strive.school</p>
-                                <p>Password: *********<p>
-                                <p>Phone: +321 044 1279</p>
+                                <p class="text-muted font-weight-lighter">Password: *********<p>
+                                <p class="text-muted font-weight-lighter">Phone: +321 044 1279</p>
                             </div>
-                            <div class="col-3 col-md-4 ml-auto text-right">
+                            <div class="col-6 col-md-4 ml-auto text-right">
                                 <p><a href="#">Change account email</a></p>
                                 <p><a href="#">Change password</a></p>
                                 <p><a href="#">Change phone number</a></p>
@@ -114,17 +120,17 @@
                         </div>
                         <hr>
                         <div class="row">
-                            <div class="col-5">
+                            <div class="col-6 col-md-5">
                                 <p> Paypal admin@strive.school</p>
                             </div>
-                            <div class="col-4 ml-auto text-right">
+                            <div class="col-6 col-md-4 ml-auto text-right">
                                 <p><a href="#">Update payment info</a></p>
                                 <p><a href="#">Billing details</a></p>
                             </div>
                         </div>
                         <hr>
                         <div class="row">
-                            <div class="col-4 ml-auto text-right">
+                            <div class="col col-md-4 ml-auto text-right">
                                 <p><a href="#">Redeem gift card or promo code</a></p>
                                 <p><a href="#">Where to buy gift cards</a></p>
                             </div>
@@ -135,15 +141,15 @@
         </div>
         <hr>
         <div class="row">
-            <div class="col-3">
-                <h5>PLAN DETAILS</h5>
+            <div class="col-md-3">
+                <p class="text-uppercase text-muted font-weight-lighter">Plan details</p>
             </div>
             <div class="col">
                 <div class="row">     
-                    <div class="col-5">
+                    <div class="col-6 col-md-5">
                         <p>Premium ULTRAHD</p>
                     </div>
-                    <div class="col-4 ml-auto text-right">
+                    <div class="col-6 col-md-4 ml-auto text-right">
                         <p><a href="#">Change plan</a></p>
                     </div>
                 </div>
@@ -151,12 +157,12 @@
         </div>
         <hr>
         <div class="row">
-            <div class="col-3">
-                <h5>SETTINGS</h5>
+            <div class="col-md-3">
+                <p class="text-uppercase text-muted font-weight-lighter">Settings</p>
             </div>
             <div class="col">
                 <div class="row">     
-                    <div class="col-5">
+                    <div class="col col-md-5">
                         <p><a href="#">Parental controls</a></p>
                         <p><a href="#">Test participation</a></p>
                         <p><a href="#">Manage download devices</a></p>
@@ -169,15 +175,15 @@
         </div>
         <hr>
         <div class="row">
-            <div class="col-3">
-                <h5>MY PROFILE</h5>
+            <div class="col-md-3">
+                <p class="text-uppercase text-muted font-weight-lighter">My profile</p>
             </div>
             <div class="col">
                 <div class="row">     
-                    <div class="col-5">
+                    <div class="col col-md-5">
                         <p>Strive student</p>
                     </div>
-                    <div class="col-4 ml-auto text-right">
+                    <div class="col col-md-4 ml-auto text-right">
                         <p><a href="#">Manage profiles</a></p>
                         <p><a href="#">Add profile email</a></p>
                     </div>
@@ -185,14 +191,14 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-9 ml-auto">
+            <div class="col col-md-9 ml-auto">
                 <div class="row">
-                    <div class="col-5">
+                    <div class="col-md-5">
                         <p><a href="#">Language</a></p>
                         <p><a href="#">Playback settings</a></p>
                         <p><a href="#">Subtitle appearance</a></p>
                     </div>
-                    <div class="col-4">
+                    <div class="col-md-4">
                         <p><a href="#">Viewing activity</a></p>
                         <p><a href="#">Ratings</a></p>
                     </div>
