--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     @media (max-width: 575.98px) {
         .sm{
             margin-top: 2rem;
+        }        
+        p{
+            font-weight:300;
         }
     }
 
